# projectWolly

./: AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  CellCollection.cpp  CellCollection.h  GameFlow.cpp  GameFlow.h  GameLogics.cpp  GameLogics.h  Player.cpp  Player.h  README.md  Winner.cpp  Winner.h  main.cpp  makefile
